# SDVX_Peripherals_Tests

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  serial_monitor.py
button_encoder_test/: CMakeLists.txt  main.c
encoder_test/: CMakeLists.txt  main.c
hid_usb_test/: CMakeLists.txt  main.c  usb_descriptors.c  usb_descriptors.h
mx_switch_test/: CMakeLists.txt  main.c
pcb_prototype/: CMakeLists.txt  main.c  usb_descriptors.c
pcb_prototype/PCB/: DRC.rpt  sdvx_proto.kicad_pcb  sdvx_proto.kicad_prl  sdvx_proto.kicad_pro  sdvx_proto.kicad_sch
pcb_prototype/PCB/gerbers/: sdvx_proto-B_Cu.gbr  sdvx_proto-B_Mask.gbr  sdvx_proto-B_Silkscreen.gbr  sdvx_proto-Edge_Cuts.gbr  sdvx_proto-F_Cu.gbr  sdvx_proto-F_Mask.gbr  sdvx_proto-F_Silkscreen.gbr  sdvx_proto-NPTH.drl  sdvx_proto-PTH.drl  sdvx_proto-job.gbrjob
